# So-distinct

./: Readme.md  pyproject.toml  requirements.txt
data/: simple_network.edgelist.txt
src/sodistinct/: cli.py
src/sodistinct.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sodistinct/api/: endpoints.py  schemas.py  server.py
src/sodistinct/config/: default.yaml  settings.py
src/sodistinct/core/: engine.py  graph_wrapper.py  metrics.py  models.py
src/sodistinct/distributed/: dask_backend.py  ray_backend.py
src/sodistinct/io/: loader.py  saver.py  stream.py
src/sodistinct/orchestrator/: local_async.py  parallel.py  scheduler.py
src/sodistinct/utils/: logging.py  persistence.py  random_seed.py
src/sodistinct/viz/: dashboard.py  dashboard_comparison.py  plots.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_engine.py  test_graph_wrapper.py  test_loader.py  test_local_async.py  test_metrics.py  test_models.py  test_parallel.py
